--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   height: 100vh;
   width: 100vw;
 
-  background-image: url("/assets/background.jpg");
+  background-image: url("./assets/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
